Spacing and highlight fixes in team page

--- a/app/team/[age]/styles.module.css
+++ b/app/team/[age]/styles.module.css
@@ -1,3 +1,7 @@
 .resultList > * {
   border-bottom: 1px solid var(--color-border-light);
 }
+
+.wrapper {
+  margin-bottom: 2rem;
+}
